[gd_scene load_steps=18 format=3 uid="uid://cff4nvaqee510"]

[ext_resource type="Script" path="res://units/enemy_mob.gd" id="1_nmw4s"]
[ext_resource type="Resource" uid="uid://b8whi3rsvjaf1" path="res://resources/enemy_mob1.tres" id="2_q75id"]
[ext_resource type="Texture2D" uid="uid://b4u3ktqm0tygj" path="res://assets/enemies/dragon_processed.png" id="3_ipwtp"]
[ext_resource type="PackedScene" uid="uid://day43uk5ccmnq" path="res://gui/health_bar.tscn" id="4_poq36"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kecv0"]
atlas = ExtResource("3_ipwtp")
region = Rect2(0, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h8vs"]
atlas = ExtResource("3_ipwtp")
region = Rect2(35, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_srkj2"]
atlas = ExtResource("3_ipwtp")
region = Rect2(70, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee0m2"]
atlas = ExtResource("3_ipwtp")
region = Rect2(0, 152, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_k21x7"]
atlas = ExtResource("3_ipwtp")
region = Rect2(35, 152, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3sov"]
atlas = ExtResource("3_ipwtp")
region = Rect2(0, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3pcr"]
atlas = ExtResource("3_ipwtp")
region = Rect2(35, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0a3"]
atlas = ExtResource("3_ipwtp")
region = Rect2(70, 38, 35, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_fxefx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kecv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h8vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srkj2")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee0m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k21x7")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3sov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3pcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0a3")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l6oy"]
size = Vector2(11.1223, 27.3997)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jkf1a"]
radius = 13.2505
height = 46.8058

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ef2s"]
radius = 21.1347
height = 54.7192

[sub_resource type="CircleShape2D" id="CircleShape2D_wnxxa"]
radius = 47.629

[node name="EnemyMob2" type="CharacterBody2D"]
scale = Vector2(0.839825, 0.99738)
collision_layer = 4
script = ExtResource("1_nmw4s")
base_stats = ExtResource("2_q75id")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.09526, 1)
sprite_frames = SubResource("SpriteFrames_fxefx")
animation = &"attack"
autoplay = "run"

[node name="HitBox" type="Area2D" parent="AnimatedSprite2D"]
scale = Vector2(0.913025, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(-15.4794, 0)
scale = Vector2(1.08082, 1.24546)
shape = SubResource("RectangleShape2D_5l6oy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.988489, 0.728313)
shape = SubResource("CapsuleShape2D_jkf1a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2(0.834277, 0.629963)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(0.945436, 1.10527)
shape = SubResource("CapsuleShape2D_3ef2s")
debug_color = Color(0.83589, 0.300212, 0.628555, 0.42)

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_wnxxa")

[node name="HealthBar" parent="." instance=ExtResource("4_poq36")]
offset_left = -11.9072
offset_top = -23.0604
offset_right = 388.093
offset_bottom = -4.0104
scale = Vector2(0.0627621, 0.14558)

[node name="HealthBarTimer" type="Timer" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="health_changed" from="." to="HealthBar" method="update_health_bar"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="AnimatedSprite2D/HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_detection_zone_area_entered"]
[connection signal="area_exited" from="DetectionZone" to="." method="_on_detection_zone_area_exited"]
[connection signal="timeout" from="HealthBarTimer" to="." method="_on_health_bar_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
